test/files/invalid/bad_type.fbs
table Foo {
  x0: bool = 1;
  x1: uint8 = true;
  x2: uint8 = NaN;
  x3: string = 42;
  x4: uint8 = "string";
}