test/files/invalid/bad_type.stderr
error: 
  ┌─ test/files/invalid/bad_type.fbs:2:14
  │
2 │   x0: bool = 1;
  │              ^ Expression not of the correct type

error: 
  ┌─ test/files/invalid/bad_type.fbs:3:15
  │
3 │   x1: uint8 = true;
  │               ^^^^ Expression not of the correct type

error: 
  ┌─ test/files/invalid/bad_type.fbs:4:15
  │
4 │   x2: uint8 = NaN;
  │               ^^^ Expression not of the correct type

error: 
  ┌─ test/files/invalid/bad_type.fbs:5:16
  │
5 │   x3: string = 42;
  │                ^^ Expression not of the correct type

error: 
  ┌─ test/files/invalid/bad_type.fbs:6:15
  │
6 │   x4: uint8 = "string";
  │               ^^^^^^^^ Expression not of the correct type

